added special class

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <section>
     <h2>Extended Blue Colors</h2>
         <ul>
-            <li class="dodgerBlue">DodgerBlue</li>
+            <li class="dodgerBlue special">DodgerBlue</li>
             <li class="powderBlue">PowderBlue</li>
         </ul>
     </section>
